...


    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Lanjut</string>
    <string name="previous">Previous</string>
    <string name="error_saat_mengambil_foto">Error saat mengambil foto: %1$s</string>
    <string name="add_a_caption">Tambahkan keterangan…</string>
    <string name="error_starting_camera">Error starting camera</string>
    <string name="succes_save_img">Foto berhasil disimpan dan akan muncul di galeri</string>
    <string name="need_permission_camera">Izin kamera diperlukan untuk menggunakan fitur ini</string>
    <string name="nothing_image_selected">Tidak ada gambar yang dipilih</string>
    <string name="succes_upload">Upload gambar berhasil</string>
    <string name="success">Berhasil!</string>
    <string name="success_make_account">Akun dengan %1$s sudah berhasil dibuat.</string>
    <string name="error_occurred_try_again">Terjadi kesalahan. Coba lagi.</string>
    <string name="must_be_filled">Semua kolom harus diisi!</string>
    <string name="welcome_login">Selamat datang %1$s, Anda berhasil login!</string>
    <string name="email_and_password_cant_blank">Email dan password tidak boleh kosong.</string>
    <string name="cannot_be_empty">%1$s tidak boleh kosong</string>
...
